ajustes ortograficos y adicion de manual de uso

--- a/src/app/dashboard/pages/visita/visita.component.html
+++ b/src/app/dashboard/pages/visita/visita.component.html
@@ -115,7 +115,7 @@
   <br />
   <div class="col-md-4 mt-5">
     <area-servicio
-      urlManual="https://tramitesenlinea.bucaramanga.gov.co/library/Manuales/M-TIC-1400-170-011%20Manual%20usuario%20(ciudadano)%20parqueadero%20publico.pdf"
+      urlManual="https://saneamiento.bucaramanga.gov.co/assets/documentos/manuales/Manual%20Concepto%20Sanitario%20V.1.0.pdf"
       tramite="CONCEPTO SANITARIO"
     ></area-servicio>
   </div>
