--- a/src/app/dashboard/pages/finaliza-visita/finaliza-visita.component.html
+++ b/src/app/dashboard/pages/finaliza-visita/finaliza-visita.component.html
@@ -3,7 +3,7 @@
   aria-live="assertive" aria-atomic="true" style="max-width: 70% !important">
   <div class="toast-header toast-header-success-govco">
       <span class="govco-svg govco-check-circle fs-mr" aria-label="info"></span>
-      <strong class="me-auto toast-title-govco">AutoEvaluación Exitosa - NIT: {{dataStore[0].nit}}</strong>
+      <strong class="me-auto toast-title-govco">Solicitud de Visita Exitosa - NIT: {{dataStore[0].nit}}</strong>
       <small class="toast-small-govco success">Hace x segundos</small>
       <!-- <a href="javascript:void(0)" role="button" data-bs-dismiss="modal"
           class="close-btn-toast" aria-label="Close" aria-expanded="false">
