--- a/src/app/dashboard/pages/form-update/form-update.component.html
+++ b/src/app/dashboard/pages/form-update/form-update.component.html
@@ -148,11 +148,31 @@
 <div class="col-md-12 mt-3">
   <div class="entradas-de-texto-govco">
     <label for="calle">Direccion* &nbsp; <small style="color:#0943B5 ;">Visualiza <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="#0943b5" d="M9.9 21V11l-3.2 1.69l-.2.03c-.31 0-.57-.12-.76-.32L5 11.63l4.9-4.2c.26-.27.6-.43 1-.43h6.5c.77 0 1.5.7 1.5 1.5v4.36c0 .61-.35 1.14-.85 1.34l-4.94 2.2l-1.21.13V21a1 1 0 0 1-1 1a1 1 0 0 1-1-1m9-16h-8V2h8z"/></svg></small></label>
-    <input type="text" name="direccion" id="direccion"  formControlName="direccion" readonly>
+    <input type="text" name="direccion" id="direccion"  formControlName="direccion" [readonly]="!direccionManual"
+      [disabled]="!direccionManual"  #direccionInput pInputText
+     pTooltip="No escribas abreviaturas, ejemplo: Kilometro 2 Via Giron # 3 - 12"
+     tooltipEvent="focus" [autoHide]="false"
+     tooltipPosition="top">
     <span *ngIf="isValidField('direccion')" class="form-text text-danger">
       {{ getFieldError("direccion") }}
     </span>
 </div>
+</div>
+<div class="col-md-12">
+  <div class="form-check mt-2">
+    <input
+      class="form-check-input"
+      type="checkbox"
+      id="direccionManual"
+      formControlName="direccion_manual"
+      [checked]="direccionManual"
+      (change)="toggleDireccionManual()"
+      style="cursor: pointer; transform: scale(0.9)"
+    >
+    <label class="form-check-label" for="direccionManual">
+      <small style="font-size: xx-small;">¿No es posible completar la dirección? Ingresa los datos manualmente.</small>
+    </label>
+  </div>
 </div>
 <div class="col-md-4 mt-3">
   <div class="entradas-de-texto-govco">
