feature preguntas de seguridad x numero de inscripcion

--- a/src/app/main/pages/buttons/buttons.component.html
+++ b/src/app/main/pages/buttons/buttons.component.html
@@ -20,6 +20,12 @@
       <span>Estado de la visita</span>
     </button>
   </a>
+    <a routerLink="./establecimientos/recordar-inscripcion" style="text-decoration: none;">
+    <button type="button" class="btn-govco outline-secundary-btn-govco icon-btn-govco" style="width: 250px; height: 42px;">
+      <span class="govco-svg govco-tired"></span>
+      <span>¿Olvidaste tu número de inscripción?</span>
+    </button>
+  </a>
 
   </div>
 </div>
